--- a/src/components/pizza/pizza.css
+++ b/src/components/pizza/pizza.css
@@ -1,15 +1,13 @@
-.toppings{
+.pizza{
     height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-h1{
-    font-family: "Caxo";
-    margin-left: 30px;
-}
 
-button{
-    margin-left: 37px;
+.pizza-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
