--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,13 @@
     font-family: "Caxo";
     src: local("Caxo"), 
     url("./font/Caxo/Caxo.otf") format("truetype");
-    font-weight: bold;
 }
 
 *{
-    font-family: "Caxo";
+    font-family: 'Kanit', sans-serif;
     margin: 0;
+}
+
+.hello{
+    background-image: linear-gradient(-225deg, #FF057C 0%, #8D0B93 50%, #321575 100%);
 }
